layout change, page cut off corrected

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 .dashboard {
-  @apply grid grid-cols-[256px_1fr] grid-rows-[64px_1fr] h-screen w-screen overflow-hidden;
+  @apply grid grid-cols-[256px_1fr] grid-rows-[64px_1fr] h-screen w-screen;
 }
 
 .side-bar {
@@ -30,7 +30,7 @@ body {
 }
 
 .main {
-  @apply col-start-2 row-start-2 bg-accent p-6 overflow-y-auto;
+  @apply col-start-2 row-start-2 bg-accent p-6 h-full overflow-y-auto;
 }
 
 .add-btn {
